--- a/src/app/shared/layouts/content-top/content-top.component.html
+++ b/src/app/shared/layouts/content-top/content-top.component.html
@@ -1,5 +1,5 @@
 <div class="content-wrap">
   <div class="profile-head">
-    <img src="assets/images/header_bg.jpg" width="100%" alt="profile-head-bg" class="profile-head-bg">
+    <img src="assets/images/headernew.jpg" width="100%" height="400px" alt="profile-head-bg" class="profile-head-bg" >
   </div>
 </div>
