--- a/src/app/pages/item/add-category/add-category.component.html
+++ b/src/app/pages/item/add-category/add-category.component.html
@@ -1,16 +1,21 @@
 <div class="row">
   <div class="col-sm-3"></div>
   <div class="col-md-6">
-    <card cardTitle="Order">
-      <form class="form-inline" [formGroup]="orderTableForm">
-        <label class="control-label">Select Table: </label>
-        <select style="width: 30%;" name="select" id="select1" class="form-control">
-          <option value="option1">Category 1</option>
-          <option value="option2">Category 2</option>
-          <option value="option3">Category 3</option>
-          <option value="option4">Category 4</option>
-        </select>
-        &nbsp;&nbsp;<button type="submit" class="btn btn-primary">Send Invitation</button>
+    <card cardTitle="Add Category">
+      <form  [formGroup]="addCategoryForm">
+        <div class="form-group">
+          <label class="control-label">Select Category</label>
+            <ng-select [allowClear]="true" [items]="category" (selected)="selected($event)"
+            (removed)="removed($event)" (typed)="typed($event)" placeholder="No category selected" formControlName="category">
+            </ng-select>
+          <!-- &nbsp;&nbsp;<button type="submit" class="btn btn-primary">Send Invitation</button> -->
+          <button type="button" class="btn btn-danger" (click)="addCategoryForm.reset()">
+            <span class="glyphicon glyphicon-trash"></span> Clear
+          </button>
+          <button type="button" class="btn btn-success" [disabled]="!addCategoryForm.valid" (click)="onSubmitClick()">
+            <span class="glyphicon glyphicon-upload"></span> Submit
+          </button>
+        </div>
       </form>
     </card>
   </div>
