--- a/src/app/pages/item/ordered-item/ordered-item.component.html
+++ b/src/app/pages/item/ordered-item/ordered-item.component.html
@@ -10,7 +10,7 @@
           <option value="option3">Table 3</option>
           <option value="option4">Table 4</option>
         </select>
-        &nbsp;&nbsp;<button type="submit" class="btn btn-primary">Send Invitation</button>
+        &nbsp;&nbsp;<button type="submit" class="btn btn-primary" (click)="onSubmitClick()">Send Invitation</button>
       </form>
     </card>
   </div>
