--- a/src/app/pages/item/view-billto-cook/view-billto-cook.component.html
+++ b/src/app/pages/item/view-billto-cook/view-billto-cook.component.html
@@ -22,7 +22,7 @@
   </div>
 </div>
 <div class="col-md-12">
-  <card cardTitle="hover table">
+  <card cardTitle="Order Details For Table 1">
     <table class="table table-hover">
       <thead>
         <tr>
