--- a/src/app/pages/cook/cook-dashboard/cook-dashboard.component.html
+++ b/src/app/pages/cook/cook-dashboard/cook-dashboard.component.html
@@ -1,3 +1,51 @@
-<p>
-  cook-dashboard works!
-</p>
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-md-6">
+    <card cardTitle="Add Category">
+      <form  [formGroup]="cookDashboardForm">
+        <div class="form-group">
+          <label class="control-label">Select Table</label>
+            <ng-select [allowClear]="true" [items]="tables" (selected)="selected($event)"
+            (removed)="removed($event)" (typed)="typed($event)" placeholder="No Table selected" formControlName="tableNumber">
+            </ng-select>
+          <!-- &nbsp;&nbsp;<button type="submit" class="btn btn-primary">Send Invitation</button> -->
+          <button type="button" class="btn btn-danger" (click)="cookDashboardForm.reset()">
+            <span class="glyphicon glyphicon-trash"></span> Clear
+          </button>
+          <button type="button" class="btn btn-success" [disabled]="!cookDashboardForm.valid" (click)="onSubmitClick()">
+            <span class="glyphicon glyphicon-upload"></span> 
+            Submit
+          </button>
+        </div>
+      </form>
+    </card>
+  </div>
+</div>
+<div class="col-md-12">
+  <card cardTitle="Order Details For Table 1">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Sr No</th>
+          <th>Table Number</th>
+          <th>Items</th>
+          <th>Item Quantity</th>
+          <th>Total Amount</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let table of allTabledetails;let index = index">
+          <td>{{index+1}}</td>
+          <td>{{table.tableNo}}</td>
+          <td>{{table.itemNames}}</td>
+          <!-- <td>{{table.itemCost}}</td> -->
+          <td>{{table.itemQuantity}}</td>
+          <!-- <td>{{table.orderQuantity}}</td> -->
+          <td>{{table.amount}}</td>
+          <td>{{table.status}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </card>
+</div>
