--- a/src/app/pages/cook/cook-dashboard/cook-dashboard.component.html
+++ b/src/app/pages/cook/cook-dashboard/cook-dashboard.component.html
@@ -37,13 +37,17 @@
       <tbody>
         <tr *ngFor="let table of allTabledetails;let index = index">
           <td>{{index+1}}</td>
-          <td>{{table.tableNo}}</td>
+          <td>
+            <a routerLink="/pages/cook/order-details" class="skills-tag">{{table.tableNo}}</a>
+          </td>
           <td>{{table.itemNames}}</td>
           <!-- <td>{{table.itemCost}}</td> -->
           <td>{{table.itemQuantity}}</td>
           <!-- <td>{{table.orderQuantity}}</td> -->
           <td>{{table.amount}}</td>
-          <td>{{table.status}}</td>
+          <td>
+            <span class="label label-info">{{table.status}}</span>
+          </td>
         </tr>
       </tbody>
     </table>
