--- a/src/app/pages/cook/cook-dashboard/cook-dashboard.component.html
+++ b/src/app/pages/cook/cook-dashboard/cook-dashboard.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<!-- <div class="row">
   <div class="col-sm-3"></div>
   <div class="col-md-6">
     <card cardTitle="Add Category">
@@ -8,7 +8,6 @@
             <ng-select [allowClear]="true" [items]="tables" (selected)="selected($event)"
             (removed)="removed($event)" (typed)="typed($event)" placeholder="No Table selected" formControlName="tableNumber">
             </ng-select>
-          <!-- &nbsp;&nbsp;<button type="submit" class="btn btn-primary">Send Invitation</button> -->
           <button type="button" class="btn btn-danger" (click)="cookDashboardForm.reset()">
             <span class="glyphicon glyphicon-trash"></span> Clear
           </button>
@@ -20,8 +19,9 @@
       </form>
     </card>
   </div>
-</div>
+</div> -->
 <div class="col-md-12">
+  <div class="col-sm-3"></div>
   <card cardTitle="Order Details For Table 1">
     <table class="table table-hover">
       <thead>
