--- a/src/app/pages/cook/order-details/order-details.component.html
+++ b/src/app/pages/cook/order-details/order-details.component.html
@@ -1,3 +1,49 @@
-<p>
-  order-details works!
-</p>
+<div class="col-md-12">
+  <card cardTitle="Order Details For Table 1">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Item No</th>
+          <th>Item Name</th>
+          <th>Item Quantity</th>
+          <th>Order Quantity</th>
+          <th>Item Cost</th>
+          <th>Amount</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let item of orderDetails;let index = index">
+          <td>{{index}}</td>
+          <td>{{item.itemName}}</td>
+          <td>{{item.itemQuantity}}</td>
+          <td>{{item.orderQuantity}}</td>
+          <td>{{item.itemCost}}</td>
+          <td>{{item.amount}}</td>
+        </tr>
+      </tbody>
+    </table>
+  </card>
+</div>
+
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-md-6">
+    <card cardTitle="Update Status">
+      <form  [formGroup]="orderDetailsForm">
+        <div class="form-group">
+          <label class="control-label">Select Table</label>
+            <ng-select [allowClear]="true" [items]="status"  (selected)="selected($event)"
+            (removed)="removed($event)" (typed)="typed($event)" placeholder="No Table selected" formControlName="orderStatus">
+            </ng-select>
+          <button type="button" class="btn btn-danger" (click)="orderDetailsForm.reset()">
+            <span class="glyphicon glyphicon-trash"></span> Clear
+          </button>
+          <button type="button" class="btn btn-success" [disabled]="!orderDetailsForm.valid" (click)="onStatusChangeClick()">
+            <span class="glyphicon glyphicon-upload"></span> 
+            Submit
+          </button>
+        </div>
+      </form>
+    </card>
+  </div>
+</div>
