--- a/src/app/pages/biller/biller-dashboard/biller-dashboard.component.html
+++ b/src/app/pages/biller/biller-dashboard/biller-dashboard.component.html
@@ -1,3 +1,33 @@
-<p>
-  biller-dashboard works!
-</p>
+<div class="col-md-12">
+  <div class="col-sm-3"></div>
+  <card cardTitle="Order Details For Table 1">
+    <table class="table table-hover">
+      <thead>
+        <tr>
+          <th>Sr No</th>
+          <th>Table Number</th>
+          <th>Items</th>
+          <th>Item Quantity</th>
+          <th>Total Amount</th>
+          <th>Status</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let table of allTabledetails;let index = index">
+          <td>{{index+1}}</td>
+          <td>
+            <a routerLink="/pages/biller/order-checkout" class="skills-tag">{{table.tableNo}}</a>
+          </td>
+          <td>{{table.itemNames}}</td>
+          <!-- <td>{{table.itemCost}}</td> -->
+          <td>{{table.itemQuantity}}</td>
+          <!-- <td>{{table.orderQuantity}}</td> -->
+          <td>{{table.amount}}</td>
+          <td>
+            <span class="label label-info">{{table.status}}</span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </card>
+</div>
