--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,3 +1,9 @@
-<p>
-  admin-dashboard works!
-</p>
+<div >
+  <div  class="grid-container">
+    <div class="grid-item" *ngFor="let item of tables;let index = index">
+      <div>
+        <a routerLink="/pages/admin/order-summary" class="skills-tag">{{item}}</a>
+      </div>
+    </div>
+  </div>
+</div>
