--- a/src/app/pages/admin/admin-functionality/admin-functionality.component.html
+++ b/src/app/pages/admin/admin-functionality/admin-functionality.component.html
@@ -1,3 +1,191 @@
-<p>
-  admin-functionality works!
-</p>
+<!-- <div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-md-6">
+    <card cardTitle="Add Category">
+      <form  [formGroup]="adminFunctionFormategoryForm">
+        <div class="form-group">
+          <label class="control-label">Select Category</label>
+            <ng-select [allowClear]="true" [items]="category" (selected)="selected($event)"
+            (removed)="removed($event)" (typed)="typed($event)" placeholder="No category selected" formControlName="category">
+            </ng-select>
+          <button type="button" class="btn btn-danger" (click)="adminFunctionFormategoryForm.reset()">
+            <span class="glyphicon glyphicon-trash"></span> Clear
+          </button>
+          <button type="button" class="btn btn-success" [disabled]="!adminFunctionFormategoryForm.valid" (click)="onSubmitClick()">
+            <span class="glyphicon glyphicon-upload"></span> Submit
+          </button>
+        </div>
+      </form>
+    </card>
+  </div>
+</div> -->
+
+<div class="row">
+  <div class="col-sm-3"></div>
+  <div class="col-md-6">
+      <form  [formGroup]="adminFunctionForm">
+        <card cardTitle="modal sizes">
+          <button class="btn btn-primary" (click)="openModal(addCat)">Add Category</button>
+          <button class="btn btn-primary" (click)="openModal(delCat)">Delete Category</button>
+          <button class="btn btn-primary" (click)="openModal(addUser)">Add User</button>
+          <button class="btn btn-primary" (click)="openModal(delUser)">Delete User</button>
+          <button class="btn btn-primary" (click)="openModal(addTab)">Add Table</button>
+          <button class="btn btn-primary" (click)="openModal(delTab)">Delete Table</button>
+          <button class="btn btn-primary" (click)="openModal(addItem)">Add Item</button>
+          <button class="btn btn-primary" (click)="openModal(delItem)">Delete Item</button>
+        </card>
+        <p></p>
+        
+        <modal #addCat>
+          <modal-header>
+            <h3>Add Category</h3>
+          </modal-header>
+          <modal-content>
+            <label class="control-label">Text</label>
+              <input type="text" class="form-control" placeholder="Text Input" formControlName="category">
+              <button type="button" class="btn btn-danger" (click)="adminFunctionForm.reset()">
+                <span class="glyphicon glyphicon-trash"></span> Clear
+              </button>
+              <button type="button" class="btn btn-success" [disabled]="!adminFunctionForm.valid" (click)="onAddCategoryClick(value)">
+                <span class="glyphicon glyphicon-upload"></span> Submit
+              </button>
+          </modal-content>
+          <modal-footer>
+            <button class="btn btn-primary" (click)="closeModal(addCat)">close</button>
+          </modal-footer>
+        </modal>
+        
+        <modal #delCat>
+          <modal-header>
+            <h3>Delete Category</h3>
+          </modal-header>
+          <modal-content>
+            <div class="form-group">
+              <label class="control-label">Select Category</label>
+                <ng-select [allowClear]="true" [items]="category" (selected)="selected($event)"
+                (removed)="removed($event)" (typed)="typed($event)" placeholder="No category selected" formControlName="category">
+                </ng-select>
+              <!-- &nbsp;&nbsp;<button type="submit" class="btn btn-primary">Send Invitation</button> -->
+              <button type="button" class="btn btn-danger" (click)="adminFunctionForm.reset()">
+                <span class="glyphicon glyphicon-trash"></span> Clear
+              </button>
+              <button type="button" class="btn btn-success" [disabled]="!adminFunctionForm.valid" (click)="onDeleteCategoryClick(value.text)">
+                <span class="glyphicon glyphicon-upload"></span> Submit
+              </button>
+            </div>
+          </modal-content>
+          <modal-footer>
+            <button class="btn btn-primary" (click)="closeModal(delCat)">close</button>
+          </modal-footer>
+        </modal>
+        
+        <modal #addUser>
+          <modal-header>
+            <h3>Add User</h3>
+          </modal-header>
+          <modal-content>
+              <label class="control-label">Text</label>
+              <input type="text" class="form-control" placeholder="Enter Table Name" formControlName="category">
+              <button type="button" class="btn btn-danger" (click)="adminFunctionForm.reset()">
+                <span class="glyphicon glyphicon-trash"></span> Clear
+              </button>
+              <button type="button" class="btn btn-success" [disabled]="!adminFunctionForm.valid" (click)="onAddTableClick(value)">
+                <span class="glyphicon glyphicon-upload"></span> Submit
+              </button>
+          </modal-content>
+          <modal-footer>
+            <button class="btn btn-primary" (click)="closeModal(addUser)">close</button>
+          </modal-footer>
+        </modal>
+        
+        <modal #delUser>
+          <modal-header>
+            <h3>Delete user</h3>
+          </modal-header>
+          <modal-content>
+            <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse.
+              Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.
+              Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip
+              quis cardigan american apparel, butcher voluptate nisi qui.</p>
+          </modal-content>
+          <modal-footer>
+            <button class="btn btn-primary" (click)="closeModal(delUser)">close</button>
+          </modal-footer>
+        </modal>
+        
+        <modal #addTab>
+          <modal-header>
+            <h3>Add Table</h3>
+          </modal-header>
+          <modal-content>
+            <label class="control-label">Text</label>
+            <input type="text" class="form-control" placeholder="Text Input" formControlName="table">
+            <button type="button" class="btn btn-danger" (click)="adminFunctionForm.reset()">
+              <span class="glyphicon glyphicon-trash"></span> Clear
+            </button>
+            <button type="button" class="btn btn-success" (click)="onAddTableClick(value)">
+              <span class="glyphicon glyphicon-upload"></span> Submit
+            </button>
+          </modal-content>
+          <modal-footer>
+            <button class="btn btn-primary" (click)="closeModal(addTab)">close</button>
+          </modal-footer>
+        </modal>
+        
+        <modal #delTab>
+          <modal-header>
+            <h3>Delete Table</h3>
+          </modal-header>
+          <modal-content>
+            <div class="form-group">
+              <label class="control-label">Select Category</label>
+                <ng-select [allowClear]="true" [items]="tables" (selected)="selected($event)"
+                (removed)="removed($event)" (typed)="typed($event)" placeholder="No category selected" formControlName="table">
+                </ng-select>
+              <!-- &nbsp;&nbsp;<button type="submit" class="btn btn-primary">Send Invitation</button> -->
+              <button type="button" class="btn btn-danger" (click)="adminFunctionForm.reset()">
+                <span class="glyphicon glyphicon-trash"></span> Clear
+              </button>
+              <button type="button" class="btn btn-success" (click)="onDeleteTableClick(value.text)">
+                <span class="glyphicon glyphicon-upload"></span> Submit
+              </button>
+            </div>
+          </modal-content>
+          <modal-footer>
+            <button class="btn btn-primary" (click)="closeModal(delTab)">close</button>
+          </modal-footer>
+        </modal>
+        
+        <modal #addItem>
+          <modal-header>
+            <h3>Add Items</h3>
+          </modal-header>
+          <modal-content>
+            <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse.
+              Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.
+              Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip
+              quis cardigan american apparel, butcher voluptate nisi qui.</p>
+          </modal-content>
+          <modal-footer>
+            <button class="btn btn-primary" (click)="closeModal(addItem)">close</button>
+          </modal-footer>
+        </modal>
+        
+        <modal #delItem>
+          <modal-header>
+            <h3>Delete Items</h3>
+          </modal-header>
+          <modal-content>
+            <p>Raw denim you probably haven't heard of them jean shorts Austin. Nesciunt tofu stumptown aliqua, retro synth master cleanse.
+              Mustache cliche tempor, williamsburg carles vegan helvetica. Reprehenderit butcher retro keffiyeh dreamcatcher synth.
+              Cosby sweater eu banh mi, qui irure terry richardson ex squid. Aliquip placeat salvia cillum iphone. Seitan aliquip
+              quis cardigan american apparel, butcher voluptate nisi qui.</p>
+          </modal-content>
+          <modal-footer>
+            <button class="btn btn-primary" (click)="closeModal(delItem)">close</button>
+          </modal-footer>
+        </modal>
+      </form>
+  </div>
+</div>
+
