--- a/src/app/pages/table/components/data-table/data-table.component.html
+++ b/src/app/pages/table/components/data-table/data-table.component.html
@@ -4,7 +4,7 @@
       <table class="table table-bordered table-hover">
         <thead>
           <tr>
-            <th>FIRSTNAME</th>
+            <!-- <th>FIRSTNAME</th> -->
             <th>LASTNAME</th>
             <th>USERNAME</th>
             <th>EMAIL</th>
@@ -14,7 +14,7 @@
         </thead>
         <tbody>
           <tr *ngFor="let item of tableData | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
-            <td>{{item.firstName}}</td>
+            <!-- <td>{{item.firstName}}</td> -->
             <td>{{item.lastName}}</td>
             <td>{{item.username}}</td>
             <td>{{item.email}}</td>
