--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -2,8 +2,46 @@
   <div  class="grid-container">
     <div class="grid-item" *ngFor="let item of tables;let index = index">
       <div>
-        <a routerLink="/pages/admin/order-summary" class="skills-tag">{{item}}</a>
+        <!-- <a routerLink="/pages/admin/order-summary" class="skills-tag">{{item}}</a> -->
+        <button class="btn btn-success" (click)="openModal(addCat)">{{item}}</button>
       </div>
     </div>
+    <modal #addCat>
+      <modal-header>
+        <h3>Add Category</h3>
+      </modal-header>
+      <modal-content>
+        <div class="col-md-12">
+          <card cardTitle="Order Details For Table 1">
+            <table class="table table-hover">
+              <thead>
+                <tr>
+                  <th>Item No</th>
+                  <th>Item Name</th>
+                  <th>Item Quantity</th>
+                  <th>Order Quantity</th>
+                  <th>Item Cost</th>
+                  <th>Amount</th>
+                </tr>
+              </thead>
+              <tbody>
+                <tr *ngFor="let item of orderDetails;let index = index">
+                  <td>{{index+1}}</td>
+                  <td>{{item.itemName}}</td>
+                  <td>{{item.itemQuantity}}</td>
+                  <td>{{item.orderQuantity}}</td>
+                  <td>{{item.itemCost}}</td>
+                  <td>{{item.amount}}</td>
+                </tr>
+              </tbody>
+            </table>
+          </card>
+        </div>
+      </modal-content>
+      <modal-footer>
+        <button class="btn btn-primary" (click)="closeModal(addCat)">close</button>
+      </modal-footer>
+    </modal>
   </div>
 </div>
+
