--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -7,9 +7,12 @@
       <content-top></content-top>
       <router-outlet></router-outlet>
       <notification></notification>
+      
     </div>
 
     <right-config></right-config>
   </div>
+  <app-page-footer></app-page-footer>
+  
 </div>
 <loading [loading]="false"></loading>
