--- a/src/app/pages/pages.component.html
+++ b/src/app/pages/pages.component.html
@@ -9,10 +9,13 @@
       <notification></notification>
       
     </div>
-
+    
     <right-config></right-config>
   </div>
-  <app-page-footer></app-page-footer>
+  <div>
+    <app-page-footer></app-page-footer>
+  </div>
+  
   
 </div>
 <loading [loading]="false"></loading>
