--- a/src/app/shared/layouts/page-footer/page-footer.component.html
+++ b/src/app/shared/layouts/page-footer/page-footer.component.html
@@ -1,39 +1,82 @@
 <!-- Footer -->
-<footer style="background-color: #21d192;" class="page-footer font-small blue">
-
+<footer style="background-color: #465294;" class="page-footer">
   <!-- Footer Text -->
   <div class="container-fluid text-center text-md-left">
-
     <!-- Grid row -->
-    <div class="row">
-
+    <div class="row" style="height: 60px;">
       <!-- Grid column -->
-      <div class="col-md-6 mt-md-0 mt-3">
+      <div class="col-md-3 mt-md-0 mt-3">
 
         <!-- Content -->
-        <h5 class="text-uppercase font-weight-bold">Footer text 1</h5>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Expedita sapiente sint, nulla, nihil repudiandae
-          commodi voluptatibus corrupti animi sequi aliquid magnam debitis, maxime quam recusandae harum esse fugiat.
-          Itaque, culpa?</p>
-
+        <h5 class="text-uppercase font-weight-bold">
+          <a href="#!" style="color: white;">About us</a>
+        </h5>
       </div>
 
-      <div class="col-md-6 mb-md-0 mb-3">
+      <div class="col-md-3 mb-md-0 mb-3">
         <!-- Content -->
-        <h5 class="text-uppercase font-weight-bold">Footer text 2</h5>
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Optio deserunt fuga perferendis modi earum commodi
-          aperiam temporibus quod nulla nesciunt aliquid debitis ullam omnis quos ipsam, aspernatur id excepturi hic.
-        </p>
+        <h5 class="text-uppercase font-weight-bold">
+          <a href="#!" style="color: white;">Awards</a>
+        </h5>
       </div>
+
+      <div class="col-md-3 mb-md-0 mb-3">
+        <!-- Content -->
+        <h5 class="text-uppercase font-weight-bold">
+          <a href="#!" style="color: white;">Help</a>
+        </h5>
+      </div>
+
+      <div class="col-md-3 mb-md-0 mb-3">
+        <!-- Content -->
+        <h5 class="text-uppercase font-weight-bold">
+          <a href="#!" style="color: white;">Contact</a>
+        </h5>
+      </div>
+      <hr class="rgba-black-light" style="margin: 0 15%;">
       <!-- Grid column -->
     </div>
     <!-- Grid row -->
+
+    <div class="about-info">
+      <h5 class="text-uppercase font-weight-bold">
+        <p style="line-height: 1.7rem">Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium
+          doloremque laudantium, totam rem aperiam,
+          eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim
+          ipsam
+          voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur.</p>
+      </h5>
+    </div>
+
+    <div class="card" style="background-color: #465294; border-color: #465294;">
+      <div class="profile-wrap animated fadeIn">
+        <div class="profile-foot">
+          <ul class="contact-way-item">
+            <li class="contact-way-list">
+              <a href="#" class="info-icon fa fa-wechat link-style"></a>
+            </li>
+            <li class="contact-way-list">
+              <a href="#" class="info-icon fa fa-weibo link-style"></a>
+            </li>
+            <li class="contact-way-list">
+              <a href="#" class="info-icon fa fa-facebook link-style"></a>
+            </li>
+            <li class="contact-way-list">
+              <a href="#" class="info-icon fa fa-github link-style"></a>
+            </li>
+            <li class="contact-way-list">
+              <a href="#" class="info-icon fa fa-envelope link-style"></a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
   </div>
   <!-- Footer Text -->
 
   <!-- Copyright -->
   <div class="footer-copyright text-center py-3">© 2020 Copyright:
-    <a href="https://mdbootstrap.com/"> MDBootstrap.com</a>
+    <a style="color: #333333;" href="https://mdbootstrap.com/"> MDBootstrap.com</a>
   </div>
   <!-- Copyright -->
 
