--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,22 +1,22 @@
 <div class="card card-block login-card">
   <h3 class="form-label">Welcome Back</h3>
   <span class="form-label">sign in to continue to Lines</span>
-  <!-- <form [formGroup]="loginForm"> -->
+  <form [formGroup]="loginForm">
     <div class="form-group">
       <div class="input-group">
-        <span class="input-group-addon addon-left" id="username">
+        <span class="input-group-addon addon-left" id="username" >
           <i class="fa fa-user fa-fw"></i>
         </span>
-        <input class="form-control with-primary-addon" placeholder="User Account" type="text">
+        <input class="form-control with-primary-addon" placeholder="User Account" type="text" formControlName="username" >
       </div>
       <div class="input-group">
         <span class="input-group-addon addon-left" id="password">
           <i class="fa fa-lock fa-fw"></i>
         </span>
-        <input class="form-control with-primary-addon" placeholder="Password" type="password">
+        <input class="form-control with-primary-addon" placeholder="Password" type="password" formControlName="password" >
       </div>
       <button type="button" class="btn btn-lg btn-primary" (click)="onLoginClick()">Login</button>
       <a href="" class="btn btn-link" >Register Now. →</a>
     </div>
-  <!-- </form> -->
+  </form>
 </div>
