--- a/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/pages/admin/admin-dashboard/admin-dashboard.component.html
@@ -1,9 +1,11 @@
-<div >
-  <div  class="grid-container">
+<div>
+  <div class="grid-container">
     <div class="grid-item" *ngFor="let item of tables;let index = index">
       <div>
         <!-- <a routerLink="/pages/admin/order-summary" class="skills-tag">{{item}}</a> -->
-        <button class="btn btn-success" (click)="openModal(addCat)">{{item}}</button>
+        <!-- <button class="btn btn-success" (click)="openModal(addCat)">{{item}}</button> status-->
+        <button *ngIf="item.status ==='AVAILABLE'"  class="btn btn-success" (click)="openModal(addCat)">{{item.tableName}}</button>
+        <button *ngIf="item.status ==='OCCUPIED'" class="btn btn-danger" (click)="openModal(addCat)">{{item.tableName}}</button>
       </div>
     </div>
     <modal #addCat>
@@ -44,4 +46,3 @@
     </modal>
   </div>
 </div>
-
