--- a/src/app/pages/waiter/take-order/take-order.component.html
+++ b/src/app/pages/waiter/take-order/take-order.component.html
@@ -1,3 +1,58 @@
-<p>
-  take-order works!
-</p>
+<button  class="btn btn-primary" onclick="history.back()">Go Back</button>
+<div class="row">
+  <div class="col-md-12">
+    <card cardTitle="Order Details For Table 1">
+      <table class="table table-bordered table-hover">
+        <thead>
+          <tr>
+            <!-- <th>FIRSTNAME</th> -->
+            <th>Sr No</th>
+            <th>Order Name</th>
+            <th>Order Category</th>
+            <th>Item Quantity
+
+            </th>
+            <th>Item Cost</th>
+            <th>Add Item</th>
+          </tr>
+        </thead>
+        <tbody>
+          <tr *ngFor="let item of tableData | paginate: { id: 'pager', itemsPerPage: pageSize, currentPage: pageNumber};let index = index">
+            <!-- <td>{{item.firstName}}</td> -->
+            <td>{{item.lastName}}</td>
+            <td>{{item.username}}</td>
+            <td>{{item.email}}</td>
+            <td>{{item.age}}
+
+            </td>
+            <td>
+              <span class="label label-info">info</span>
+            </td>
+          </tr>
+        </tbody>
+      </table>
+      <form class="pagination-wrapper">
+        <div class="form-group pages">
+          <pagination-controls class="my-pagination" id="pager" (pageChange)="pageChanged($event)" maxSize="9" directionLinks="true"
+            autoHide="true" previousLabel="Prev" nextLabel="Next" screenReaderPaginationLabel="Pagination" screenReaderPageLabel="page"
+            screenReaderCurrentLabel="You're on page">
+          </pagination-controls>
+        </div>
+        <div class="form-group options pages">
+          <div class="input-group input-group-sm">
+            <select class="form-control" name="pageChangedName" [(ngModel)]="pageSize" (ngModelChange)="loadData()">
+              <option>1</option>
+              <option>5</option>
+              <option>10</option>
+              <option>20</option>
+              <option>50</option>
+              <option>100</option>
+              <option>200</option>
+            </select>
+            <span class="input-group-addon addon-right">Per Page</span>
+          </div>
+        </div>
+      </form>
+    </card>
+  </div>
+</div>
