--- a/src/app/pages/waiter/waiter-dashboard/waiter-dashboard.component.scss
+++ b/src/app/pages/waiter/waiter-dashboard/waiter-dashboard.component.scss
@@ -11,3 +11,11 @@
   font-size: 30px;
   text-align: center;
 }
+
+.btn {
+  padding: .3em .8em;
+  border: none;
+  border-radius: 1.5px;
+  color: #f5f5f5;;
+}
+
