--- a/src/app/pages/cook/cook-dashboard/cook-dashboard.component.html
+++ b/src/app/pages/cook/cook-dashboard/cook-dashboard.component.html
@@ -7,7 +7,7 @@
           <th>Sr No</th>
           <th>Table Number</th>
           <th>Items</th>
-          <th>Item Quantity</th>
+          <!-- <th>Item Quantity</th> -->
           <th>Total Amount</th>
           <th>Status</th>
         </tr>
@@ -15,16 +15,16 @@
       <tbody>
         <tr *ngFor="let table of allTabledetails;let index = index">
           <td>{{index+1}}</td>
-          <td>
-            <a routerLink="/pages/cook/order-details" class="skills-tag">{{table.tableNo}}</a>
+          <td class="col-sm-3">
+            <a routerLink="/pages/cook/order-details" class="skills-tag">{{table.tableName}}</a>
           </td>
-          <td>{{table.itemNames}}</td>
+          <td class="col-sm-3">{{table.orderSummary}}</td>
           <!-- <td>{{table.itemCost}}</td> -->
-          <td>{{table.itemQuantity}}</td>
+          <!-- <td>{{table.itemQuantity}}</td> -->
           <!-- <td>{{table.orderQuantity}}</td> -->
-          <td>{{table.amount}}</td>
-          <td>
-            <span class="label label-info">{{table.status}}</span>
+          <td class="col-sm-3">{{table.totalAmount}}</td>
+          <td class="col-sm-3">
+            <span class="label label-info">{{table.orderStatus}}</span>
           </td>
         </tr>
       </tbody>
